# playwell

./: LICENSE  README.md  pyproject.toml
brickset_scraper/brickset_scraper/spiders/: brickset_spider.py
